--- a/software-multilayer-switch/MainWindow.ui
+++ b/software-multilayer-switch/MainWindow.ui
@@ -40,47 +40,16 @@ QPushButton:pressed {
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QTextEdit" name="camTableDisplay">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QTextEdit {
-     background-color: gray; border: 1px solid gray;
-	color: #ffffff;
-}</string>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="2">
-     <widget class="QPushButton" name="clearButton">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton {
-     background-color: #C0C0C0; border: 1px solid gray;
-	border-radius: 0px;
-	padding: 5px;
-}
-QPushButton:pressed {
-    background-color: #A9A9A9; border: 1px solid gray;
-	border-radius: 0px;
-	padding: 5px;
-}</string>
+    <item row="0" column="2">
+     <widget class="QLabel" name="camTableLabel">
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
       </property>
       <property name="text">
-       <string>clear</string>
+       <string>CAM Table</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
@@ -113,16 +82,76 @@ QPushButton:pressed {
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QLabel" name="camTableLabel">
-      <property name="layoutDirection">
-       <enum>Qt::LeftToRight</enum>
+    <item row="2" column="2">
+     <widget class="QPushButton" name="clearButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+     background-color: #C0C0C0; border: 1px solid gray;
+	border-radius: 0px;
+	padding: 5px;
+}
+QPushButton:pressed {
+    background-color: #A9A9A9; border: 1px solid gray;
+	border-radius: 0px;
+	padding: 5px;
+}</string>
       </property>
       <property name="text">
-       <string>CAM Table</string>
+       <string>clear</string>
       </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QTextEdit" name="camTableDisplay">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QTextEdit {
+     background-color: gray; border: 1px solid gray;
+	color: #ffffff;
+}</string>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLineEdit" name="setTimerLineEdit">
+      <property name="styleSheet">
+       <string notr="true">QLineEdit {
+     background-color: gray; border: 1px solid gray;
+	color: #ffffff;
+}</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="2">
+     <widget class="QPushButton" name="setTimerButton">
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+     background-color: #C0C0C0; border: 1px solid gray;
+	border-radius: 0px;
+	padding: 5px;
+}
+QPushButton:pressed {
+    background-color: #A9A9A9; border: 1px solid gray;
+	border-radius: 0px;
+	padding: 5px;
+}</string>
+      </property>
+      <property name="text">
+       <string>set timer</string>
       </property>
      </widget>
     </item>
