--- a/software-multilayer-switch/MainWindow.ui
+++ b/software-multilayer-switch/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>751</width>
-    <height>536</height>
+    <width>873</width>
+    <height>675</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="0">
+    <item row="14" column="0">
      <widget class="QPushButton" name="startButton">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -40,20 +40,7 @@ QPushButton:pressed {
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QLabel" name="camTableLabel">
-      <property name="layoutDirection">
-       <enum>Qt::LeftToRight</enum>
-      </property>
-      <property name="text">
-       <string>CAM Table</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0" colspan="2">
+    <item row="4" column="0" rowspan="8">
      <widget class="QTextEdit" name="statisticsDisplay">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -72,17 +59,41 @@ QPushButton:pressed {
       </property>
      </widget>
     </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="statisticsLabel">
+    <item row="17" column="2">
+     <widget class="QLineEdit" name="filterSetIPLineEdit">
       <property name="text">
-       <string>Statistics</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
+       <string>IP address</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="2">
+    <item row="19" column="0">
+     <widget class="QLineEdit" name="filterIOLineEdit">
+      <property name="text">
+       <string>in out</string>
+      </property>
+     </widget>
+    </item>
+    <item row="12" column="0">
+     <widget class="QLineEdit" name="setTimerLineEdit">
+      <property name="styleSheet">
+       <string notr="true">QLineEdit {
+     background-color: gray; border: 1px solid gray;
+	color: #ffffff;
+}</string>
+      </property>
+      <property name="text">
+       <string>Timer in secons</string>
+      </property>
+     </widget>
+    </item>
+    <item row="17" column="0">
+     <widget class="QLineEdit" name="filterSetMACLineEdit">
+      <property name="text">
+       <string>MAC address</string>
+      </property>
+     </widget>
+    </item>
+    <item row="14" column="2">
      <widget class="QPushButton" name="clearButton">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -107,36 +118,14 @@ QPushButton:pressed {
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QTextEdit" name="camTableDisplay">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QTextEdit {
-     background-color: gray; border: 1px solid gray;
-	color: #ffffff;
-}</string>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
+    <item row="18" column="2">
+     <widget class="QLineEdit" name="filterProtocolLineEdit">
+      <property name="text">
+       <string>http icmp tcp udp ip arp</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QLineEdit" name="setTimerLineEdit">
-      <property name="styleSheet">
-       <string notr="true">QLineEdit {
-     background-color: gray; border: 1px solid gray;
-	color: #ffffff;
-}</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="2">
+    <item row="12" column="2">
      <widget class="QPushButton" name="setTimerButton">
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -155,6 +144,69 @@ QPushButton:pressed {
       </property>
      </widget>
     </item>
+    <item row="4" column="2" rowspan="8">
+     <widget class="QTextEdit" name="camTableDisplay">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QTextEdit {
+     background-color: gray; border: 1px solid gray;
+	color: #ffffff;
+}</string>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="18" column="0">
+     <widget class="QLineEdit" name="filterSetPortLineEdit">
+      <property name="text">
+       <string>Port number</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="statisticsLabel">
+      <property name="text">
+       <string>Statistics</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <widget class="QLabel" name="camTableLabel">
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
+      <property name="text">
+       <string>CAM Table</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="20" column="0">
+     <widget class="QPushButton" name="filterSetButton">
+      <property name="text">
+       <string>set filters</string>
+      </property>
+     </widget>
+    </item>
+    <item row="19" column="2">
+     <widget class="QLineEdit" name="filterPermitDenyLineEdit">
+      <property name="text">
+       <string>permit deny</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -162,7 +214,7 @@ QPushButton:pressed {
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>751</width>
+     <width>873</width>
      <height>26</height>
     </rect>
    </property>
